display latest searches first

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ block content
               button#submit-weather-search.btn.btn-default(type="submit") Search
           if isError
             p.search-error
-              | Your search returned an error.
+              | Your search returned an error. Please search by city.
 
 
     .spinner.hidden
