change page title

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
   body
     nav.navbar.navbar-default.navbar-fixed-top
       .container-fluid
-          a.navbar-brand(href='#') Weather App
+          a.navbar-brand(href='#') An API-less Weather App
 
     block content
 
